Fix: viewport height on mobile devices

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -31,6 +31,7 @@
 
         width: 100%;
         min-height: 100vh;
+        height: -webkit-fill-available;
         padding: 1rem;
         overflow: hidden;
 
